# mcp-finnhub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily_news.yml
scripts/: fetch_daily_news.py
src/finnhub_mcp/: cli.py  server.py
workflowdata/: README.md  news_20260129.json  news_20260130.json  news_20260131.json  news_20260201.json  news_20260202.json  news_20260203.json  news_20260204.json  news_20260205.json  news_20260206.json  news_20260207.json  news_20260208.json  news_20260304.json  news_20260305.json  news_20260306.json  news_20260307.json  news_20260308.json  news_20260309.json  news_20260310.json  news_20260311.json  news_20260312.json  news_20260313.json  news_20260314.json  news_20260315.json  news_20260316.json  news_20260317.json  news_20260318.json  news_20260319.json  news_20260320.json  news_20260321.json  news_20260322.json  news_20260323.json  news_20260325.json  news_20260326.json  news_20260327.json  news_20260328.json  news_20260329.json  news_20260330.json  news_20260331.json  news_20260401.json  (+21 more)
