[project]
name = "mcp-finnhub"
version = "0.1.0"
description = "An MCP server to connect with Finnhub financial API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "fastmcp>=0.4.0",
     "finnhub-python",
]

[project.scripts]
finnhub-mcp = "finnhub_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Home = "https://github.com/catherinedparnell/mcp-finnhub"

[tool.hatch.build.targets.wheel]
packages = ["src/finnhub_mcp"]